Fri Sep  7 14:32:01 2001  Brian Gough  <bjg@network-theory.co.uk>

	* configure.in: avoid clobbering any LIBS specified, by not
 	putting -lm in front of them.  This allows the user to specify an
 	alternate math library for the configure script.

Thu Sep  6 21:08:10 2001  Brian Gough  <bjg@network-theory.co.uk>

	* configure.in: added an option to specify an alternative math
 	library

Tue Sep  4 09:41:37 2001  Brian Gough  <bjg@network-theory.co.uk>

	* gsl.spec.in: autogenerate gsl.spec from gsl.spec.in

Sun Aug 26 17:19:24 2001  Brian Gough  <bjg@network-theory.co.uk>

	* acconfig.h: fixed incorrect #ifdef for HAVE_FINITE (Henry
 	Sobotka)

Sat Aug 25 10:25:41 2001  Brian Gough  <bjg@network-theory.co.uk>

	* gsl_math.h: moved includes to beginning of file to avoid
 	redefinition errors on OS/2

Tue Aug 21 23:54:45 2001  Brian Gough  <bjg@network-theory.co.uk>

	* gsl_nan.h (GSL_POSINF): removed incorrect use of _FPCLASS.. for
 	MSVC, these are flags not numerical values.

Thu Aug  9 22:51:00 2001  Brian Gough  <bjg@network-theory.co.uk>

	* config.h.in: added a macro for discarding a pointer, used to
 	suppress warnings from gcc about unused parameters

Sun Aug  5 20:35:09 2001  Brian Gough  <bjg@network-theory.co.uk>

	* configure.in: move PPC bug test to beginning of configure
 	script, to save waiting for it to appear at the end

Sat Jul 14 21:13:55 2001  Brian Gough  <bjg@network-theory.co.uk>

	* gsl_nan.h: use C99X macro INFINITY where available

Fri Jul 13 21:31:01 2001  Brian Gough  <bjg@network-theory.co.uk>

	* templates_on.h: added macros for unqualified views, needed for
 	initialization of views

Mon Jul  9 11:22:16 2001  Brian Gough  <bjg@network-theory.co.uk>

	* configure.in: made check for extended precision registers
 	independent of test for os ieee interface type

Sun Jul  1 22:44:00 2001  Brian Gough  <bjg@network-theory.co.uk>

	* templates_on.h templates_off.h: modified to support views
