@@ -6,10 +6,14 @@ SUBDIRS = gsl utils sys test err const complex cheb block vector matrix permutat
 
 SUBLIBS = block/libgslblock.la blas/libgslblas.la complex/libgslcomplex.la cheb/libgslcheb.la dht/libgsldht.la diff/libgsldiff.la eigen/libgsleigen.la err/libgslerr.la fft/libgslfft.la fit/libgslfit.la histogram/libgslhistogram.la ieee-utils/libgslieeeutils.la integration/libgslintegration.la interpolation/libgslinterpolation.la linalg/libgsllinalg.la matrix/libgslmatrix.la min/libgslmin.la monte/libgslmonte.la multifit/libgslmultifit.la multimin/libgslmultimin.la multiroots/libgslmultiroots.la ntuple/libgslntuple.la ode-initval/libgslodeiv.la permutation/libgslpermutation.la poly/libgslpoly.la qrng/libgslqrng.la randist/libgslrandist.la rng/libgslrng.la roots/libgslroots.la siman/libgslsiman.la sort/libgslsort.la specfunc/libgslspecfunc.la statistics/libgslstatistics.la sum/libgslsum.la sys/libgslsys.la test/libgsltest.la utils/libutils.la vector/libgslvector.la
 
+pkginclude_HEADERS = gsl_math.h gsl_pow_int.h gsl_nan.h gsl_machine.h gsl_mode.h gsl_precision.h gsl_version.h
+
 bin_SCRIPTS = gsl-config
 
-pkginclude_HEADERS = gsl_math.h gsl_pow_int.h gsl_nan.h gsl_machine.h gsl_mode.h gsl_precision.h gsl_version.h
-EXTRA_DIST = autogen.sh gsl-config.in configure.in THANKS KNOWN-PROBLEMS gsl.spec.in gsl.m4 MACHINES test_gsl_histogram.sh
+pkgconfigdir = $(libdir)/pkgconfig
+pkgconfig_DATA= gsl.pc
+
+EXTRA_DIST = autogen.sh gsl-config.in gsl.pc.in configure.in THANKS KNOWN-PROBLEMS gsl.spec.in gsl.m4 MACHINES test_gsl_histogram.sh
 
 lib_LTLIBRARIES = libgsl.la
 libgsl_la_SOURCES = version.c
