@@ -1,0 +1,10 @@
+prefix=@prefix@
+exec_prefix=@exec_prefix@
+libdir=@libdir@
+includedir=@includedir@
+
+Name: GSL
+Description: GNU Scientific Library
+Version: @VERSION@
+Libs: @GSL_LIBS@ -lgslcblas -lm
+Cflags: @GSL_CFLAGS@
